# backend/src/DTO/LoginUserRequest.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\DTO;
+
+use Symfony\Component\Validator\Constraints as Assert;
+
+class LoginUserRequest {
+  #[Assert\NotBlank]
+  #[Assert\Email]
+  public string $email;
+
+  #[Assert\NotBlank]
+  public string $password;
+}
